# ddelta-rs

./: Cargo.toml  LICENSE  README.md
benches/: memcmp.rs
src/: diff.rs  lib.rs  main.rs  patch.rs
