[package]
name = "ddelta"
version = "0.1.0"
authors = ["lights0123 <developer@lights0123.com>"]
description = "Rust port of the streaming ddelta patch algorithm, based on bsdiff"
repository = "https://github.com/lights0123/ddelta-rs"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
zerocopy = "0.3.0"
byteorder = "1.3.4"
divsufsort = "2.0.0"
anyhow = "1.0.28"
cdivsufsort = { version = "2.0.0", optional = true }
indicatif = "0.14.0"
argh = "0.1.3"
crossbeam = "0.7.3"
rayon = "1.3.0"
dashmap = "3.10.0"

[[bench]]
name = "memcmp"
harness = false

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[features]
default = ["c"]
c = ["cdivsufsort"]

[profile.release]
panic = "abort"
lto = true
debug = true
